# nttiny

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ;  CMakeLists.txt  Depends.mk  Devel.mk  LICENSE.md  Makefile  Makefile.devel  Makefile.old  README.md  imgui.ini  nttiny.toml  run.sh
docker/: Dockerfile  docker-compose.yml
examples/: 01_xyz_flds.cpp  04_xyz_flds_prtls.cpp  05_1d_flds_prtls.cpp  CMakeLists.txt  ex_cart_flds.cpp  ex_cart_prtls_dprec.cpp  ex_logR_prtls.cpp  ex_logR_prtls_buffs.cpp  ex_sph.cpp
include/glad/: glad.h
include/nttiny/: api.h  vis.h
lib/: glad.cpp
lib/glad/: glad.h
nttiny/: CMakeLists.txt  api.cpp  api.h  defs.h  export.cpp  export.h  main.cpp  plots.cpp  plots.h  plots_2d.cpp  plots_2d.h  style.h  templates.cpp  tools.cpp  tools.h  vis.cpp  vis.h  window.cpp  window.h
nttiny/assets/: cousine.h  fa-regular.h  fa-solid.h  icons.h  imgui_freetype.cpp  implot_extra.cpp  implot_extra.h  implot_utils.h  jetbrains.h  style.h
nttiny/implot-dev/: implot_renderers.h  implot_transformers.h  implot_utils.h
nttiny/plotters/: implot_heatmap_cart.cpp  implot_heatmap_cart.h  implot_heatmap_polar.cpp  implot_heatmap_polar.cpp.bak  implot_heatmap_polar.h  lineplot1d.cpp  metadata.h  pcolor2d.cpp  plot2d.cpp  plots.h  plots_1d.cpp  plots_1d.h  plots_2d.cpp  plots_2d.h  scatter2d.cpp  timeplot.cpp
nttiny/renderers/: implot_heatmap_cart.cpp  implot_heatmap_cart.h  implot_heatmap_polar.cpp  implot_heatmap_polar.h
nttiny/ui/: imgui_notify.h  implot_renderers.h  implot_transformers.h  implot_utils.h
shaders/: green.frag  red.frag  shader.frag  shader.vert
src/: CMakeLists.txt  api.cpp  api.h  aux.h  defs.h  export.h  main.cpp  plots.cpp  plots.h  sim.cpp  sim.h  templates.cpp  vis.cpp  vis.h  window.cpp  window.h
src/assets/: fa-regular.h
src/glEngine/: glad.c  glad.cpp  menu.cpp  menu.h  mpl.cpp  mpl.h  program.cpp  program.h  renderer.h  shader.cpp  shader.h  shaders.cpp  shaders.h  sprite.cpp  sprite.h  texture.cpp  texture.h  window.cpp  window.h
src/glEngine/shaders/: shader.vert
src/plotters/: pcolor2d.cpp  scatter2d.cpp  timeplot.cpp
src/renderers/: implot_heatmap_cart.cpp  implot_heatmap_polar.cpp  implot_heatmap_polar.h
src/shaders/: shader.frag
src/ui/: implot_utils.h
src/userfiles/: tut_01.cpp  tut_01.h  tut_01.vert  tut_02.cpp  tut_02.frag  tut_02.h  tut_02.vert
